--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -757,7 +757,16 @@
 				<artifactId>byte-buddy</artifactId>
 				<version>1.12.3</version>
 			</dependency>
+			<dependency>
+                                <groupId>org.eclipse.jetty</groupId>
+                                <artifactId>jetty-bom</artifactId>
+				<version>${jetty.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+                        </dependency>
+
 			<!-- Jetty -->
+			<!--
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-server</artifactId>
@@ -783,6 +792,7 @@
 				<artifactId>apache-jsp</artifactId>
 				<version>${jetty.version}</version>
 			</dependency>
+			-->
 			<!-- <dependency> <groupId>org.eclipse.jetty</groupId> <artifactId>jetty-jsp</artifactId> 
 				<version>${jetty.version}</version> <type>jar</type> <scope>compile</scope> 
 				</dependency> -->
