--- a/jenax-models-parent/pom.xml
+++ b/jenax-models-parent/pom.xml
@@ -19,6 +19,7 @@
 		<module>jenax-models-dcat-api</module>
 		<module>jenax-models-entityinfo</module>
 		<module>jenax-models-csvw</module>
+		<module>jenax-models-d2rq</module>
 	</modules>
 </project>
 
