Added module with a model for prefix declarations in RDF (needs yet to be consolidated with the udf model)

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -217,6 +217,11 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+                                <groupId>org.aksw.jenax</groupId>
+                                <artifactId>jenax-models-prefixes</artifactId>
+                                <version>${project.version}</version>
+                        </dependency>
+			<dependency>
 				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-models-dcat-api</artifactId>
 				<version>${project.version}</version>
