--- a/jenax-models-parent/pom.xml
+++ b/jenax-models-parent/pom.xml
@@ -14,12 +14,13 @@
 	</parent>
 
 	<modules>
+		<module>jenax-models-prefixes</module>
 		<module>jenax-models-foaf</module>
 		<module>jenax-models-prov</module>
 		<module>jenax-models-dcat-api</module>
 		<module>jenax-models-entityinfo</module>
 		<module>jenax-models-csvw</module>
-		<module>jenax-models-d2rq</module>
+		<module>jenax-models-d2rq</module>		
 	</modules>
 </project>
 
