Added PathPPA implementation (P)roperty (P)aths with (A)liases. Fix: LabelUtils should no longer bail out on invalid literals. Added first classes to a new table module (very crude) in an attempt to model specifications for building (hierarchical) tables in RDF.

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -217,10 +217,10 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-                                <groupId>org.aksw.jenax</groupId>
-                                <artifactId>jenax-models-prefixes</artifactId>
-                                <version>${project.version}</version>
-                        </dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-models-prefixes</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-models-dcat-api</artifactId>
@@ -234,6 +234,11 @@
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-models-prov</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-models-table</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
