--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -71,6 +71,7 @@
 		<jts.version>1.18.1</jts.version>
 		<gson.version>2.9.0</gson.version>
 		<annotation-api.version>1.3.2</annotation-api.version>
+		<topbraid.shacl.version>1.4.2</topbraid.shacl.version>
 		<!-- <atmosphere.version>2.0.0.RC3</atmosphere.version> -->
 		<!-- <atmosphere-spring.version>1.1.0.RC5</atmosphere-spring.version> -->
 		<!-- <jetty-plugin.version>8.1.10.v20130312</jetty-plugin.version> -->
@@ -218,7 +219,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
-				<artifactId>jenax-models-prefixes</artifactId>
+				<artifactId>jenax-models-shacl</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -495,11 +496,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
-				<artifactId>jenax-models-csvw</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-facete-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -516,7 +512,7 @@
 			<dependency>
 				<groupId>org.topbraid</groupId>
 				<artifactId>shacl</artifactId>
-				<version>1.3.2</version>
+				<version>${topbraid.shacl.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.apache.jena</groupId>
@@ -615,6 +611,11 @@
 			<dependency>
 				<groupId>org.apache.jena</groupId>
 				<artifactId>jena-arq</artifactId>
+				<version>${jena.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.jena</groupId>
+				<artifactId>jena-shacl</artifactId>
 				<version>${jena.version}</version>
 			</dependency>
 			<dependency>
