--- a/jenax-models-parent/jenax-models-shacl/pom.xml
+++ b/jenax-models-parent/jenax-models-shacl/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>jenax-models-shacl</artifactId>
 	<packaging>jar</packaging>
@@ -9,6 +11,14 @@
 		<version>4.8.0-3-SNAPSHOT</version>
 	</parent>
 	<dependencies>
+		<!--		<dependency>-->
+		<!--			<groupId>org.apache.velocity</groupId>-->
+		<!--			<artifactId>velocity-engine-core</artifactId>-->
+		<!--		</dependency>-->
+		<dependency>
+			<groupId>io.pebbletemplates</groupId>
+			<artifactId>pebble</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-collections</artifactId>
