--- a/jenax-models-parent/jenax-models-shacl/pom.xml
+++ b/jenax-models-parent/jenax-models-shacl/pom.xml
@@ -15,6 +15,10 @@
 		<!--			<groupId>org.apache.velocity</groupId>-->
 		<!--			<artifactId>velocity-engine-core</artifactId>-->
 		<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.aksw.commons</groupId>-->
+<!--			<artifactId>aksw-commons-utils-xml</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>io.pebbletemplates</groupId>
 			<artifactId>pebble</artifactId>
