--- a/jenax-arq-parent/jenax-arq-json/pom.xml
+++ b/jenax-arq-parent/jenax-arq-json/pom.xml
@@ -16,6 +16,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-datapaths</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-stmt</artifactId>
 		</dependency>
 
