--- a/jenax-models-parent/jenax-models-shacl/pom.xml
+++ b/jenax-models-parent/jenax-models-shacl/pom.xml
@@ -15,10 +15,14 @@
 		<!--			<groupId>org.apache.velocity</groupId>-->
 		<!--			<artifactId>velocity-engine-core</artifactId>-->
 		<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.aksw.commons</groupId>-->
-<!--			<artifactId>aksw-commons-utils-xml</artifactId>-->
-<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>org.aksw.commons</groupId>-->
+		<!--			<artifactId>aksw-commons-utils-xml</artifactId>-->
+		<!--		</dependency>-->
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-shacl</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>io.pebbletemplates</groupId>
 			<artifactId>pebble</artifactId>
