--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -154,6 +154,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-graphql</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-resources-servicedescription</artifactId>
 				<version>${project.version}</version>
 			</dependency>
