--- a/jenax-graphql/pom.xml
+++ b/jenax-graphql/pom.xml
@@ -44,17 +44,10 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>org.aksw.jena-sparql-api</groupId> -->
-		<!-- <artifactId>jena-sparql-api-resources-test-config</artifactId> -->
-		<!-- <scope>test</scope> -->
-		<!-- </dependency> -->
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.aksw.jena-sparql-api</groupId> -->
-		<!-- <artifactId>jena-sparql-api-resources</artifactId> -->
-		<!-- <scope>test</scope> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-resources-test-config</artifactId>
+		</dependency>
 
 	</dependencies>
 </project>
