--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>jenax-bom</artifactId> -->
 	<groupId>org.aksw.jenax</groupId>
 	<artifactId>jenax-bom</artifactId>
-	<version>4.9.0-1-SNAPSHOT</version>
+	<version>4.9.0-1</version>
 	<packaging>pom</packaging>
 	<name>Jena eXtension Components</name>
 	<description>Modular extensions for Apache Jena</description>
