--- a/jenax-fsrdfstore-parent/jenax-fsrdfstore-system/pom.xml
+++ b/jenax-fsrdfstore-parent/jenax-fsrdfstore-system/pom.xml
@@ -7,7 +7,7 @@
         <parent>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-fsrdfstore-parent</artifactId>
-                <version>4.9.0-1-SNAPSHOT</version>
+                <version>4.9.0-1</version>
         </parent>
 
 	<artifactId>jenax-fsrdfstore-system</artifactId>
