--- a/jenax-jgrapht-parent/jenax-jgrapht-subgraphisoindex/pom.xml
+++ b/jenax-jgrapht-parent/jenax-jgrapht-subgraphisoindex/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-jgrapht-parent</artifactId>
-		<version>4.9.0-1-SNAPSHOT</version>
+		<version>4.9.0-1</version>
 	</parent>
 
 	<dependencies>
