--- a/jenax-reprogen-parent/jenax-reprogen-shacl/pom.xml
+++ b/jenax-reprogen-parent/jenax-reprogen-shacl/pom.xml
@@ -11,7 +11,7 @@
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-reprogen-parent</artifactId>
 		<!--< <artifactId>jena-sparql-api-mapper-parent</artifactId> -->
-		<version>4.9.0-1-SNAPSHOT</version>
+		<version>4.9.0-1</version>
 	</parent>
 
 	<dependencies>
