--- a/jenax-analytics-parent/jenax-analytics-core/pom.xml
+++ b/jenax-analytics-parent/jenax-analytics-core/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-analytics-parent</artifactId>
-		<version>4.9.0-1</version>
+		<version>4.9.0-2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
