--- a/jenax-graphql/pom.xml
+++ b/jenax-graphql/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-parent</artifactId>
-		<version>4.9.0-1</version>
+		<version>4.9.0-2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jenax-graphql</artifactId>
