--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>jenax-bom</artifactId> -->
 	<groupId>org.aksw.jenax</groupId>
 	<artifactId>jenax-bom</artifactId>
-	<version>4.9.0-2-SNAPSHOT</version>
+	<version>4.10.0-1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Jena eXtension Components</name>
 	<description>Modular extensions for Apache Jena</description>
@@ -43,7 +43,7 @@
 		<module>..</module>
 	</modules>
 	<properties>
-		<jena.version>4.9.0</jena.version>
+		<jena.version>4.10.0</jena.version>
 		<!-- <jetty.version>9.4.8.v20171121</jetty.version> -->
 		<!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
 		<!-- <jetty.version>11.0.0</jetty.version> this is java 11+ only -->
@@ -67,7 +67,7 @@
 		<tika.version>2.1.0</tika.version>
 		<spring.version>5.3.2</spring.version>
 		<spring.batch.version>4.3.1</spring.batch.version>
-		<aksw-commons.version>0.9.7</aksw-commons.version>
+		<aksw-commons.version>0.9.8-SNAPSHOT</aksw-commons.version>
 		<javax.xml.version>2.3.1</javax.xml.version>
 		<jaxb.version>2.3.1</jaxb.version>
 		<jts.version>1.19.0</jts.version>
