--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -43,6 +43,9 @@
 		<module>..</module>
 	</modules>
 	<properties>
+		<slf4j.version>2.0.9</slf4j.version>
+		<log4j.version>2.21.0</log4j.version>
+
 		<!-- <jena.version>4.10.0</jena.version> -->
 		<jena.version>5.0.0-SNAPSHOT</jena.version>
 
@@ -50,24 +53,24 @@
 		<!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
 		<!-- <jetty.version>11.0.0</jetty.version> this is java 11+ only -->
 		<!-- <jetty.version>9.4.35.v20201120</jetty.version> -->
-		<jetty.version>9.4.40.v20210413</jetty.version>
+		<ee.version>10</ee.version>
+		<jetty.version>12.0.3</jetty.version>
 		<kryo.version>4.0.2</kryo.version>
 		<jgrapht.version>1.5.1</jgrapht.version>
 		<!-- 2.18 could be tried out next -->
 		<!-- <jersey.version>2.26-b03</jersey.version> -->
 		<!-- <jersey.version>2.30</jersey.version> -->
-		<jersey.version>2.35</jersey.version>
+		<!-- <jersey.version>2.35</jersey.version> -->
+		<jersey.version>3.1.3</jersey.version>
 		<asm.version>8.0.1</asm.version>
 		<guava.version>31.0.1-jre</guava.version>
 		<commons-compress.version>1.21</commons-compress.version>
 		<commons-vfs2.version>2.9.0</commons-vfs2.version>
 		<ver.commons-math>3.6.1</ver.commons-math>
-		<slf4j.version>2.0.9</slf4j.version>
-		<log4j.version>2.21.0</log4j.version>
 		<hadoop.version>3.3.4</hadoop.version>
 		<junit.version>4.13.2</junit.version>
 		<tika.version>2.1.0</tika.version>
-		<spring.version>5.3.31</spring.version>
+		<spring.version>6.1.1</spring.version>
 		<spring.batch.version>4.3.1</spring.batch.version>
 		<aksw-commons.version>0.9.8-SNAPSHOT</aksw-commons.version>
 		<javax.xml.version>2.3.1</javax.xml.version>
@@ -774,7 +777,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish.jersey.ext</groupId>
-				<artifactId>jersey-spring5</artifactId>
+				<artifactId>jersey-spring6</artifactId>
 				<version>${jersey.version}</version>
 				<exclusions>
 					<exclusion>
@@ -834,74 +837,20 @@
 			<!-- Jetty -->
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-server</artifactId>
+				<artifactId>jetty-bom</artifactId>
 				<version>${jetty.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
 			</dependency>
+
 			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-webapp</artifactId>
+				<groupId>org.eclipse.jetty.ee${ee.version}</groupId>
+				<artifactId>jetty-ee${ee.version}-bom</artifactId>
 				<version>${jetty.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
 			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-servlet</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-http</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-security</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-io</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-util-ajax</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-util</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-servlets</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-xml</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-plus</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-jndi</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-annotations</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>apache-jsp</artifactId>
-				<version>${jetty.version}</version>
-			</dependency>
+
 			<!-- <dependency> <groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-jsp</artifactId> 
 				<version>${jetty.version}</version> <type>jar</type> <scope>compile</scope> 
@@ -963,17 +912,17 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-bom</artifactId>
-				<version>${log4j.version}</version>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-bom</artifactId>
+				<version>${slf4j.version}</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-bom</artifactId>
-				<version>${slf4j.version}</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-bom</artifactId>
+				<version>${log4j.version}</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
@@ -1231,9 +1180,9 @@
 			</dependency>
 			<!-- Servlet APIs -->
 			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
-				<version>4.0.1</version>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
+				<version>6.0.0</version>
 			</dependency>
 			<!-- <dependency> -->
 			<!-- <groupId>javax.ws.rs</groupId> -->
@@ -1241,9 +1190,9 @@
 			<!-- <version>1.1.1</version> -->
 			<!-- </dependency> -->
 			<dependency>
-				<groupId>javax.ws.rs</groupId>
-				<artifactId>javax.ws.rs-api</artifactId>
-				<version>2.1.1</version>
+				<groupId>jakarta.ws.rs</groupId>
+				<artifactId>jakarta.ws.rs-api</artifactId>
+				<version>3.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
