--- a/jenax-server-parent/jenax-server-core/pom.xml
+++ b/jenax-server-parent/jenax-server-core/pom.xml
@@ -146,7 +146,7 @@
 
 		<dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
-			<artifactId>jersey-spring5</artifactId>
+			<artifactId>jersey-spring6</artifactId>
 		</dependency>
 
 		<dependency>
@@ -159,11 +159,10 @@
 		<!-- <groupId>org.atmosphere</groupId> -->
 		<!-- <artifactId>atmosphere-jersey</artifactId> -->
 		<!-- </dependency> -->
-
-
+		
 		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
+			<groupId>org.eclipse.jetty.ee10</groupId>
+			<artifactId>jetty-ee10-servlet</artifactId>
 		</dependency>
 
 		<!-- <dependency> -->
@@ -188,8 +187,8 @@
 		<!-- </dependency> -->
 
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
 		</dependency>
 
 		<!-- <dependency> -->
@@ -198,8 +197,8 @@
 		<!-- </dependency> -->
 
 		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>javax.ws.rs-api</artifactId>
+			<groupId>jakarta.ws.rs</groupId>
+			<artifactId>jakarta.ws.rs-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jena</groupId>
