--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -46,6 +46,12 @@
 		<slf4j.version>2.0.9</slf4j.version>
 		<log4j.version>2.21.0</log4j.version>
 
+		<ee.version>10</ee.version>
+		<jetty.version>12.0.3</jetty.version>
+		<jakarta.xml.version>4.0.0</jakarta.xml.version>
+		<jaxb.version>2.3.1</jaxb.version>
+		<javax.xml.version>2.3.1</javax.xml.version> <!-- legacy; superseded by jakarta.xml; used by a plugin in jenax-facete-impl -->
+
 		<!-- <jena.version>4.10.0</jena.version> -->
 		<jena.version>5.0.0-SNAPSHOT</jena.version>
 
@@ -53,8 +59,6 @@
 		<!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
 		<!-- <jetty.version>11.0.0</jetty.version> this is java 11+ only -->
 		<!-- <jetty.version>9.4.35.v20201120</jetty.version> -->
-		<ee.version>10</ee.version>
-		<jetty.version>12.0.3</jetty.version>
 		<kryo.version>4.0.2</kryo.version>
 		<jgrapht.version>1.5.1</jgrapht.version>
 		<!-- 2.18 could be tried out next -->
@@ -69,12 +73,10 @@
 		<ver.commons-math>3.6.1</ver.commons-math>
 		<hadoop.version>3.3.4</hadoop.version>
 		<junit.version>4.13.2</junit.version>
-		<tika.version>2.1.0</tika.version>
+		<tika.version>2.9.1</tika.version>
 		<spring.version>6.1.1</spring.version>
 		<spring.batch.version>4.3.1</spring.batch.version>
 		<aksw-commons.version>0.9.8-SNAPSHOT</aksw-commons.version>
-		<javax.xml.version>2.3.1</javax.xml.version>
-		<jaxb.version>2.3.1</jaxb.version>
 		<jts.version>1.19.0</jts.version>
 		<gson.version>2.9.0</gson.version>
 		<annotation-api.version>1.3.2</annotation-api.version>
@@ -596,9 +598,9 @@
 			</dependency>
 			<!-- java 9+ for server-standalone -->
 			<dependency>
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
-				<version>${javax.xml.version}</version>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
+				<version>${jakarta.xml.version}</version>
 			</dependency>
 			<!-- <dependency> <groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId> 
@@ -1626,7 +1628,7 @@
 						<dependency>
 							<groupId>javax.xml.bind</groupId>
 							<artifactId>jaxb-api</artifactId>
-							<version>${javax.xml.version}</version>
+							<version>2.3.1</version>
 						</dependency>
 						<dependency>
 							<groupId>javax.annotation</groupId>
