--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -50,7 +50,8 @@
 		<jetty.version>12.0.3</jetty.version>
 		<jakarta.xml.version>4.0.0</jakarta.xml.version>
 		<jaxb.version>2.3.1</jaxb.version>
-		<javax.xml.version>2.3.1</javax.xml.version> <!-- legacy; superseded by jakarta.xml; used by a plugin in jenax-facete-impl -->
+		<javax.xml.version>2.3.1</javax.xml.version> <!-- legacy; superseded by
+		jakarta.xml; used by a plugin in jenax-facete-impl -->
 
 		<!-- <jena.version>4.10.0</jena.version> -->
 		<jena.version>5.0.0-SNAPSHOT</jena.version>
@@ -81,6 +82,10 @@
 		<gson.version>2.9.0</gson.version>
 		<annotation-api.version>1.3.2</annotation-api.version>
 		<topbraid.shacl.version>1.4.2</topbraid.shacl.version>
+		<!-- <jgit.version>6.7.0.202309050840-r</jgit.version> -->
+		<jgit.version>5.6.0.201912101111-r</jgit.version>
+		<jsch.version>0.0.9</jsch.version>
+
 
 		<velocity-engine.version>2.3</velocity-engine.version>
 		<pebble.version>3.2.1</pebble.version>
@@ -586,6 +591,34 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+
+			<dependency>
+				<groupId>org.eclipse.jgit</groupId>
+				<artifactId>org.eclipse.jgit</artifactId>
+				<version>${jgit.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jgit</groupId>
+				<artifactId>org.eclipse.jgit.http.server</artifactId>
+				<version>${jgit.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.jcraft</groupId>
+				<artifactId>jsch.agentproxy.jsch</artifactId>
+				<version>${jsch.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.jcraft</groupId>
+				<artifactId>jsch.agentproxy.usocket-jna</artifactId>
+				<version>${jsch.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.jcraft</groupId>
+				<artifactId>jsch.agentproxy.sshagent</artifactId>
+				<version>${jsch.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>com.google.maps</groupId>
 				<artifactId>google-maps-services</artifactId>
