--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -46,11 +46,16 @@
 		<slf4j.version>2.0.9</slf4j.version>
 		<log4j.version>2.21.0</log4j.version>
 
-		<ee.version>10</ee.version>
+		<ee.version>9</ee.version> <!-- ee9->servlet-api: 9->5.0.0 10->6.0.2 -->
 		<jetty.version>12.0.3</jetty.version>
+		<jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
+		<jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
+
+		<spring.version>6.1.1</spring.version>
+		<spring.batch.version>4.3.1</spring.batch.version>
+
 		<jakarta.xml.version>4.0.0</jakarta.xml.version>
 		<jaxb.version>2.3.1</jaxb.version>
-		<rs-api.version>3.1.0</rs-api.version>
 		<javax.xml.version>2.3.1</javax.xml.version> <!-- legacy; superseded by
 		jakarta.xml; used only by a plugin in jenax-facete-impl -->
 
@@ -76,8 +81,6 @@
 		<hadoop.version>3.3.4</hadoop.version>
 		<junit.version>4.13.2</junit.version>
 		<tika.version>2.9.1</tika.version>
-		<spring.version>6.1.1</spring.version>
-		<spring.batch.version>4.3.1</spring.batch.version>
 		<aksw-commons.version>0.9.8-SNAPSHOT</aksw-commons.version>
 		<jts.version>1.19.0</jts.version>
 		<gson.version>2.9.0</gson.version>
@@ -1210,7 +1213,7 @@
 			<dependency>
 				<groupId>jakarta.servlet</groupId>
 				<artifactId>jakarta.servlet-api</artifactId>
-				<version>6.0.0</version>
+				<version>${jakarta.servlet-api.version}</version>
 			</dependency>
 			<!-- <dependency> -->
 			<!-- <groupId>javax.ws.rs</groupId> -->
@@ -1220,7 +1223,7 @@
 			<dependency>
 				<groupId>jakarta.ws.rs</groupId>
 				<artifactId>jakarta.ws.rs-api</artifactId>
-				<version>${rs-api.version}</version>
+				<version>${jakarta.ws.rs-api.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
