--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -1281,6 +1281,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.tika</groupId>
+				<artifactId>tika-parsers-standard-package</artifactId>
+				<version>${tika.version}</version>
+			</dependency>
+			<!--
+			<dependency>
+				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-java7</artifactId>
 				<version>${tika.version}</version>
 				<exclusions>
@@ -1294,6 +1300,8 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			-->
+			
 			<!-- <dependency> -->
 			<!-- <groupId>org.springframework</groupId> -->
 			<!-- <artifactId>spring-io</artifactId> -->
