--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -198,6 +198,11 @@
 			<version>1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.sedona</groupId>
+			<artifactId>sedona-common</artifactId>
+		</dependency>
+
 		<!-- <dependency> -->
 		<!-- <groupId>org.locationtech.jts</groupId> -->
 		<!-- <artifactId>jts-core</artifactId> -->
