--- a/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
@@ -48,15 +48,17 @@
 											<exclude>org.apache.maven:lib:tests</exclude>
 											<exclude>log4j:log4j:jar:</exclude>
 										</excludes>
-									</artifactSet><filters>
-									<filter>
-										<artifact>*:*</artifact>
-										<excludes>
-											<exclude>META-INF/*.SF</exclude>
-											<exclude>META-INF/*.DSA</exclude>
-											<exclude>META-INF/*.RSA</exclude>
-										</excludes>
-									</filter></filters>
+									</artifactSet>
+									<filters>
+										<filter>
+											<artifact>*:*</artifact>
+											<excludes>
+												<exclude>META-INF/*.SF</exclude>
+												<exclude>META-INF/*.DSA</exclude>
+												<exclude>META-INF/*.RSA</exclude>
+											</excludes>
+										</filter>
+									</filters>
 									<transformers>
 										<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
 									</transformers>
