Work on design of a sparql polyfill rdf vocab module Moved rdfs views for label and comment to separate jenax-module-rdfs module

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -285,6 +285,16 @@
 			</dependency>
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-models-rdfs</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-models-polyfill</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-models-shacl</artifactId>
 				<version>${project.version}</version>
 			</dependency>
