--- a/jenax-models-parent/pom.xml
+++ b/jenax-models-parent/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<modules>
+		<module>jenax-models-rdfs</module>
 		<module>jenax-models-shacl</module>
 		<module>jenax-models-foaf</module>
 		<module>jenax-models-prov</module>
@@ -24,6 +25,7 @@
 		<module>jenax-models-table</module>
 		<module>jenax-models-void</module>
 		<module>jenax-models-udf</module>
+		<module>jenax-models-polyfill</module>
 	</modules>
 </project>
 
