Fixed scope of test resource config to 'test' rather than compile

--- a/jenax-graphql/pom.xml
+++ b/jenax-graphql/pom.xml
@@ -47,6 +47,7 @@
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-resources-test-config</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
